--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "Very Secret Key and two times secret key mother fucker i lost 2 hours fixing this shit fuck you"
+  },
   "ConnectionStrings": {
     "default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ITSHOP;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
