--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,7 +6,10 @@
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.3.1",
+    "install": "^0.13.0",
     "jquery": "3.3.1",
+    "mdbootstrap": "^4.19.1",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-notification-alert": "0.0.12",
